Refactoring of aggregate persistence module